# python-project-83

./: .env  .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pytest.yml
page_analyzer/: __init__.py  app.py  railway.json
page_analyzer/templates/: database.html  index.html
page_analyzer/templates/urls/: index.html
