[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["AleksandrKosmylev <alex.kosmylev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
psycopg2-binary = "^2.9.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
